--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Black & White",
+  "name": "bw_front",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -16,7 +16,7 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
-    "nuxt": "^2.14.6",
+    "nuxt": "^2.14.12",
     "web3": "^1.3.1"
   },
   "devDependencies": {
