--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.14.12",
+    "nuxt-izitoast": "^1.0.0",
     "vue-js-modal": "^2.0.0-rc.6",
     "web3": "^1.3.1"
   },
