--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.14.12",
     "nuxt-izitoast": "^1.0.0",
+    "portal-vue": "^2.1.7",
     "vue-js-modal": "^2.0.0-rc.6",
     "web3": "^1.3.1"
   },
